<resources>
    <string name="app_name">Resume Yuri</string>
    <string name="menu_about">About</string>
    <string name="android_developer">android developer</string>
    <string name="skills_android_summary">Java, Kotlin, SQLite</string>
    <string name="skills_IDE_summary">Android Studio, Visual Studio Code</string>
    <string name="skills_other_summary">Python, JavaScript, C++ (Arduino), MySQL, HTML, CSS, React, NodeJS, Bootstrap, Git
</string>
    <string name="photo_description">Personal Photo</string>
    <string name="name">Yuri Panov</string>
    <string name="skills_button_label">Skills</string>
    <string name="contacts_button_label">Contacts</string>
    <string name="more_button_label">More about me</string>
    <string name="experience_button_label">Experience</string>
    <string name="education_button_label">Education</string>
    <string name="title">Title</string>
    <string name="description">Description</string>
    <string name="title_activity_fullscreen_photo">FullscreenActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="large_photo">Large personal photo</string>
    <string name="hobby_button">Hobby button</string>


</resources>