<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"

    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/teal_700">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/fragment_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <ImageView
            android:id="@+id/Photo"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:layout_marginTop="40dp"
            android:contentDescription="@string/photo_description"
            android:src="@drawable/yuri_s_tp"
            app:layout_constraintStart_toStartOf="@+id/linearLayout"
            app:layout_constraintTop_toTopOf="parent"
            tools:srcCompat="@tools:sample/avatars"
            android:elevation="2dp"
            android:stateListAnimator="@animator/elevation_animator"/>

        <TextView
            android:id="@+id/tv_developer"
            style="@style/BackgroundLight"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:paddingStart="20dp"
            android:paddingEnd="20dp"
            android:text="@string/android_developer"
            android:textAlignment="center"
            android:textColor="@color/teal_700"
            android:textSize="34sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/Photo" />

        <TextView
            android:id="@+id/tv_android_skills"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:paddingStart="20dp"
            android:paddingEnd="20dp"
            android:text="@string/skills_android_summary"
            android:textAlignment="center"
            android:textSize="24sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_developer" />

        <TextView
            android:id="@+id/tv_other_skills"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:paddingStart="20dp"
            android:paddingEnd="20dp"
            android:text="@string/skills_other_summary"
            android:textAlignment="center"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_android_skills" />

        <TextView
            android:id="@+id/tv_name"
            android:layout_width="149dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:gravity="bottom"
            android:text="@string/name"
            android:textSize="40sp"
            app:layout_constraintBottom_toBottomOf="@+id/Photo"
            app:layout_constraintStart_toEndOf="@+id/Photo"
            app:layout_constraintTop_toTopOf="@+id/Photo" />


        <LinearLayout
            android:id="@+id/linearLayout"
            style="@style/BackgroundLight"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:orientation="vertical"
            android:paddingBottom="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_other_skills">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <ImageButton
                        android:id="@+id/bt_contacts"
                        style="@style/Button"
                        android:contentDescription="@string/contacts_button_label"
                        android:src="@drawable/ic_phone" />

                    <TextView
                        android:id="@+id/tv_contacts"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginTop="0dp"
                        android:text="@string/contacts_button_label" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <ImageButton
                        android:id="@+id/bt_skills"
                        style="@style/Button"
                        android:contentDescription="@string/skills_button_label"
                        android:src="@drawable/ic_skills" />

                    <TextView
                        android:id="@+id/tv_skills"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginTop="0dp"
                        android:text="@string/skills_button_label" />
                </LinearLayout>


            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <ImageButton
                        android:id="@+id/bt_education"
                        style="@style/Button"
                        android:contentDescription="@string/education_button_label"
                        android:src="@drawable/ic_education" />

                    <TextView
                        android:id="@+id/tv_education"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginTop="0dp"
                        android:text="@string/education_button_label" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <ImageButton
                        android:id="@+id/bt_experience"
                        style="@style/Button"
                        android:contentDescription="@string/experience_button_label"
                        android:src="@drawable/ic_experience" />

                    <TextView
                        android:id="@+id/tv_experience"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginTop="0dp"
                        android:text="@string/experience_button_label" />
                </LinearLayout>

            </LinearLayout>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <ImageButton
                        android:id="@+id/bt_hobby"
                        style="@style/Button"
                        android:contentDescription="@string/hobby_button"
                        android:scaleType="fitCenter"
                        android:src="@drawable/bike" />

                    <TextView
                        android:id="@+id/tv_hobby"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginTop="0dp"
                        android:text="My hobby" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <ImageButton
                        android:id="@+id/bt_more"
                        style="@style/Button"
                        android:contentDescription="@string/more_button_label"
                        android:src="@drawable/ic_more" />

                    <TextView
                        android:id="@+id/tv_more"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginTop="0dp"
                        android:text="@string/more_button_label" />
                </LinearLayout>

            </LinearLayout>
        </LinearLayout>


    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>